chore(meditation): fixes header spacing Fixes #47

--- a/src/app/meditation/meditation.css
+++ b/src/app/meditation/meditation.css
@@ -15,7 +15,9 @@ md-card.nopadding {
 }
 
 md-card-title {
+  margin-top: 10px;
   font-size: 17px;
+  margin-bottom: 5px;
 }
 
 [md-mini-fab] {
